tests/specs/ecosystem/stump/adapter_filesystem/0_0_1.test
stump/adapter-filesystem/0.0.1
-- deno.lock --
{}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'FileSystemAdapter<Meta>'.
  public ingestLogs(logs: Array<Log<Meta>>): Promise<void> {
         ~~~~~~~~~~
    at file://<tmpdir>/src/drivers/bun/index.ts:7:10

error: Type checking failed.

